# RNN-ECG-analysis

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: baseline_model.ipynb  baseline_model_copy.ipynb  conv1d_copy.ipynb  dense.ipynb  grapghs.ipynb  import_data.ipynb  lstm.ipynb  lstm_copy.ipynb  projekt.ipynb  visualize_data.ipynb
notebooks/models/: 1d_cnn.keras  1d_cnn_80.keras  1d_cnn_81.keras  1d_cnn_82.keras  1d_cnn_best.keras  aug_1d_cnn.keras  aug_1d_cnn_lstm.keras  aug_double_lstm_bidirectional.keras  aug_double_lstm_bidirectional_l2.keras  dense_baseline.keras  dense_larger.keras  double_lstm.keras  double_lstm_bidirectional.keras  lstm_with_dense.keras  lstm_with_dense_larger.keras  lstm_with_dense_longerTrain.keras
scripts/: prepare_data.py
