[project]
name = "rnn-ecg-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imblearn>=0.0",
    "kagglehub>=0.3.13",
    "keras>=3.12.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
